--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
   "name": "02-api-rest-nodejs",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx  watch src/server.js"
+    "dev": "tsx watch src/server.ts",
+    "lint": "npx eslint src --ext .ts --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "fastify": "^4.28.1"
-  },
   "devDependencies": {
-    "tsx": "^4.19.0",
-    "typescript": "^5.5.4"
+    "@rocketseat/eslint-config": "^1.3.0",
+    "@types/node": "^18.11.18",
+    "eslint": "^8.33.0",
+    "tsx": "^3.12.2",
+    "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "fastify": "^4.12.0"
   }
 }
