--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "fastify": "^4.12.0"
+    "fastify": "^4.12.0",
+    "knex": "^3.1.0",
+    "sqlite3": "^5.1.7"
   }
 }
