--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "fastify": "^4.12.0",
     "knex": "^3.1.0",
     "sqlite3": "^5.1.7"
