--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@fastify/cookie": "^8.3.0",
     "dotenv": "^16.4.5",
-    "fastify": "^4.12.0",
+    "fastify": "^4.28.1",
     "knex": "^3.1.0",
     "sqlite3": "^5.1.7",
     "zod": "^3.23.8"
