--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "knex": "node --import tsx ./node_modules/.bin/knex",
-    "lint": "npx eslint src --ext .ts --fix"
+    "lint": "npx eslint src --ext .ts --fix",
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +17,8 @@
     "@types/node": "^18.11.18",
     "eslint": "^8.33.0",
     "tsx": "^3.12.2",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vitest": "^2.1.1"
   },
   "dependencies": {
     "@fastify/cookie": "^8.3.0",
