--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.3.0",
     "@types/node": "^18.11.18",
+    "@types/supertest": "^6.0.2",
     "eslint": "^8.33.0",
+    "supertest": "^7.0.0",
     "tsx": "^3.12.2",
     "typescript": "^4.9.5",
     "vitest": "^2.1.1"
