--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "tsx watch src/server.ts",
     "knex": "node --import tsx ./node_modules/.bin/knex",
     "lint": "npx eslint src --ext .ts --fix",
+    "build": "tsup src --out-dir build",
     "test": "vitest"
   },
   "keywords": [],
@@ -18,6 +19,7 @@
     "@types/supertest": "^6.0.2",
     "eslint": "^8.33.0",
     "supertest": "^7.0.0",
+    "tsup": "^8.3.0",
     "tsx": "^3.12.2",
     "typescript": "^4.9.5",
     "vitest": "^2.1.1"
