--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "18"
+  },
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "knex": "node --import tsx ./node_modules/.bin/knex",
@@ -18,6 +21,7 @@
     "@types/node": "^18.11.18",
     "@types/supertest": "^6.0.2",
     "eslint": "^8.33.0",
+    "sqlite3": "^5.1.7",
     "supertest": "^7.0.0",
     "tsup": "^8.3.0",
     "tsx": "^3.12.2",
@@ -29,7 +33,7 @@
     "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
     "knex": "^3.1.0",
-    "sqlite3": "^5.1.7",
+    "pg": "^8.13.0",
     "zod": "^3.23.8"
   }
 }
